@@ -25,3 +25,4 @@ Charlie Brady              <charlieb@e-smith.com>
 Jon Morby                  <jon@fido.net>
 Paul Martin                <pm@zetnet.net>
 Jonathan Yarden            <jyarden@bluegrass.net>
+Patrick Cole               <z@amused.net>
